--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="row pt-2">
     <div class="col">
       <h1 id="page-title" class="text-dark text-center">
-        Sample Angular App <span class="text-danger">created for Solutions Architect Path</span>
+        Fatma's Sample Angular App <span class="text-danger">created for Solutions Architect Path</span>
       </h1>
       <hr>
       <h2 class="text-left">
